<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item"
    android:layout_margin="2dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/newsimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvbody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>