<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewRead">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/readimage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_margin="8dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/some_desc" />

            <TextView
                android:id="@+id/readtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/readdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/description"
                android:layout_margin="8dp"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>